--- a/beta - Copy.html
+++ b/beta - Copy.html
@@ -122,6 +122,14 @@
                             </div>
                         </div>
                         <div class="divCarousel">
+                            <div class="divVariant divActive divVariantClassicPlus">
+                                <img src="Image/tick.png" class="imgTick" style="width: 16px;display: none;">
+                                <img src="Image/classic.png" class="img-fluid imgPic imgActive" style="width: 40px;">
+                                <p class="pVariantBox pVariantActive">Classic</p>
+                                <button class="btnSelect">Select</button>
+                            </div>
+                        </div>
+                        <div class="divCarousel">
                             <div class="divVariant divNotActive divVariantElite">
                                 <img src="Image/tick.png" class="imgTick" style="width: 16px;display: none;">
                                 <img src="Image/elite.png" class="img-fluid imgPic imgNotActive" style="width: 40px;">
@@ -194,6 +202,34 @@
                                     <p class="pBenefits"><img src="Image/check1.png" class="imgCheck"
                                             style="margin-right: 10px;">Free
                                         dental checkup, plus a 10% discount on other dental procedures</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="divBenefits divClassicPlus" style="width: 110%;">
+                        <div class="container-fluid" style="padding: 0px;">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <p class="pBenefits"><img src="Image/check1.png" class="imgCheck"
+                                            style="margin-right: 10px;">1 year unlimited consultation with Medical
+                                        Consultant (In any Aventus 13 - clinic branches)</p>
+                                </div>
+                                <div class="col-lg-6">
+                                    <p class="pBenefits"><img src="Image/check1.png" class="imgCheck"
+                                            style="margin-right: 10px;">Fixed
+                                        fee of PHP 400 for specialists</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <p class="pBenefits"><img src="Image/check1.png" class="imgCheck"
+                                            style="margin-right: 10px;">10%
+                                        discount on laboratory & diagnostic services</p>
+                                </div>
+                                <div class="col-lg-6">
+                                    <p class="pBenefits"><img src="Image/check1.png" class="imgCheck"
+                                            style="margin-right: 10px;">PLUS 1 year unlimited TELEconsult with both GP
+                                        and Specialist</p>
                                 </div>
                             </div>
                         </div>
@@ -551,7 +587,7 @@
                                 </form>
                             </div>
                         </div>
-                        <p class = "pCreate">Credit/Debit Card Details</p>
+                        <p class="pCreate">Credit/Debit Card Details</p>
                         <hr>
                         <div class="row">
                             <div class="col-lg-12">
@@ -721,6 +757,304 @@
             </div>
         </div>
     </div>
-    <script src='Script\beta.js'></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
+<script>
+    $(document).ready(function () {
+        $(".owl-carousel").owlCarousel();
+    });
+
+    var imgSrc = $('.imgProf').attr("src");
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                $('#blah').attr('src', e.target.result);
+                if (imgSrc === $('#blah').attr("src")) {
+                    $('.pFillemail').text("Please put a valid image");
+                }
+                else {
+                    $('.pFillemail').text("");
+                }
+            }
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+    $("#imgInp").change(function () {
+        readURL(this);
+    });
+
+
+
+    var variant;
+    var price;
+
+
+
+
+
+
+    $(".divVariant").click(function () {
+        $(".divVariant").removeClass("divActive");
+        $(".divVariant").addClass("divNotActive");
+        $(".divVariant").find('.imgPic').removeClass("imgActive");
+        $(".divVariant").find('.pVariantBox').removeClass("pVariantActive");
+        $(this).find('.imgPic').addClass("imgActive");
+        $(this).find('.pVariantBox').addClass("pVariantActive");
+        $(this).removeClass("divNotActive");
+        $(this).addClass("divActive");
+    });
+
+    $(".divVariantClassic").click(function () {
+        const element = document.querySelector('.divBenefits')
+        element.classList.add('animated', 'fadeOut');
+        $(".divBenefits").css("display", "none");
+        const element1 = document.querySelector('.divClassic')
+        element1.classList.add('animated', 'fadeIn');
+        $(".divClassic").css("display", "block");
+        $(this).find('.imgTick').css("display", "block");
+        variant = "Classic";
+    });
+
+    $(".divVariantClassicPlus").click(function () {
+        const element = document.querySelector('.divBenefits')
+        element.classList.add('animated', 'fadeOut');
+        $(".divBenefits").css("display", "none");
+        const element1 = document.querySelector('.divClassic')
+        element1.classList.add('animated', 'fadeIn');
+        $(".divClassicPlus").css("display", "block");
+        $(this).find('.imgTick').css("display", "block");
+        variant = "ClassicPlus";
+    });
+
+    $(".divVariantElite").click(function () {
+        const element = document.querySelector('.divBenefits')
+        element.classList.add('animated', 'fadeOut');
+        $(".divBenefits").css("display", "none");
+        $(".imgTick").css("display", "none");
+        const element1 = document.querySelector('.divElite')
+        element1.classList.add('animated', 'fadeIn');
+        $(".divElite").css("display", "block");
+        $(this).find('.imgTick').css("display", "block");
+        variant = "Elite";
+    });
+
+    $(".divVariantPrime").click(function () {
+        const element = document.querySelector('.divBenefits')
+        element.classList.add('animated', 'fadeOut');
+        $(".divBenefits").css("display", "none");
+        const element1 = document.querySelector('.divPrime')
+        element1.classList.add('animated', 'fadeIn');
+        $(".divPrime").css("display", "block");
+        $(this).find('.imgTick').css("display", "block");
+        variant = "Prime";
+    });
+
+    $(".divVariantVeteran").click(function () {
+        const element = document.querySelector('.divBenefits')
+        element.classList.add('animated', 'fadeOut');
+        $(".divBenefits").css("display", "none");
+        const element1 = document.querySelector('.divVeteran')
+        element1.classList.add('animated', 'fadeIn');
+        $(".divVeteran").css("display", "block");
+        $(this).find('.imgTick').css("display", "block");
+        variant = "Veteran";
+    });
+
+    $(".divVariantPrestige").click(function () {
+        const element = document.querySelector('.divBenefits')
+        element.classList.add('animated', 'fadeOut');
+        $(".divBenefits").css("display", "none");
+        const element1 = document.querySelector('.divPrestige')
+        element1.classList.add('animated', 'fadeIn');
+        $(".divPrestige").css("display", "block");
+        $(this).find('.imgTick').css("display", "block");
+        variant = "Prestige";
+    });
+
+    $(".divVariantKiddie").click(function () {
+        const element = document.querySelector('.divBenefits')
+        element.classList.add('animated', 'fadeOut');
+        $(".divBenefits").css("display", "none");
+        const element1 = document.querySelector('.divKiddie')
+        element1.classList.add('animated', 'fadeIn');
+        $(".divKiddie").css("display", "block");
+        $(this).find('.imgTick').css("display", "block");
+        variant = "Kiddie";
+    });
+
+
+
+    $('.owl-carousel').owlCarousel({
+        margin: 10,
+        responsiveClass: true,
+        responsive: {
+            0: {
+                items: 2,
+                nav: true
+            },
+            600: {
+                items: 3,
+                nav: true
+            },
+            1000: {
+                items: 3,
+                loop: false,
+                nav: true
+            }
+        }
+    })
+
+
+    jQuery(window).resize(function () {
+        var screen = $(window)
+        if (screen.width < 500) {
+            $(".conMain").removeClass("h-100");
+        }
+        else {
+            $(".conMain").addClass("h-100");
+        }
+    });
+
+    var next = 1;
+    var back = 1;
+    $(".btnNextFooter").click(function () {
+        if (next === 1) {
+            const element = document.querySelector('.divCreate')
+            element.classList.add('animated', 'fadeOut');
+            $(".divStep1").removeClass("divBoxActive");
+            $(".divStep2").addClass("divBoxActive");
+            $(".divCreate").css("display", "none");
+            $(".divCreate").removeClass("animated");
+            $(".divCreate").removeClass("fadeOut");
+            $(".divMembership").css("display", "block");
+            const element1 = document.querySelector('.divMembership')
+            element1.classList.add('animated', 'fadeIn');
+            $('.pVariant').text(variant);
+            next = 2;
+            back = 2;
+            $(".divLine1").css("background-color", "#00C853");
+            $(".p2").css("background-color", "#00C853");
+        }
+        else if (next === 2) {
+            const element = document.querySelector('.divPersonalInfo')
+            element.classList.add('animated', 'fadeOut');
+            $(".divPersonalInfo").css("display", "none");
+            $(".divPersonalInfo").removeClass("animated");
+            $(".divPersonalInfo").removeClass("fadeOut");
+            $(".divAddress").css("display", "block");
+            const element1 = document.querySelector('.divAddress')
+            element1.classList.add('animated', 'fadeIn');
+            next = 3;
+            back = 2;
+        }
+        else if (next === 3) {
+            const element = document.querySelector('.divMembership')
+            element.classList.add('animated', 'fadeOut');
+            $(".divMembership").css("display", "none");
+            $(".divMembership").removeClass("animated");
+            $(".divMembership").removeClass("fadeOut");
+            $(".divStep2").removeClass("divBoxActive");
+            $(".divStep3").addClass("divBoxActive");
+            const element1 = document.querySelector('.divOverview')
+            element1.classList.add('animated', 'fadeIn');
+            $(".divOverview").css("display", "block");
+            $(".imgOverview").attr("src", $(".imgProf").attr('src'));
+            newText = $('.txtfirstname').val() + ' ' + $('.txtmiddle').val() + ' ' + $('.txtlast').val();
+            $('.pFirst').text($('.txtfirstname').val());
+            $('.pMiddle').text($('.txtmiddle').val());
+            $('.pLast').text($('.txtlast').val());
+            $('.pFullName').text(newText);
+            $('.pEmail').text($('.txtEmail').val());
+            $('.pPhone').text($('.txtPhone').val());
+            $('.pMobile').text($('.txtMobile').val());
+            $('.pVariant').text(variant);
+            $('.pPrice').text(price);
+            $('.pBday').text($('.bday').val());
+            $('.pAddress').text($('.txtAddress').val());
+            back = 3;
+            $(".divLine2").css("background-color", "#00C853");
+            $(".p3").css("background-color", "#00C853");
+
+            if (variant === "Classic") {
+                price = "600.00";
+            }
+            else if (variant === "ClassicPlus") {
+                price = "699.00";
+            }
+            else if (variant === "Elite") {
+                price = "999.00";
+            }
+            else if (variant === "Prime") {
+                price = "2999.00";
+            }
+            else if (variant === "Premium") {
+                price = "1499.00";
+            }
+            else if (variant === "Prestige") {
+                price = "9999.00";
+            }
+            else if (variant === "Kiddie") {
+                price = "1499.00";
+            }
+
+
+            $(".imgArrow").css("display", "block");
+            $(".btnNextFooter").html("Pay" + " " + "\u20B1" + price);
+            $(".btnNextFooter").html("Pay" + " " + "\u20B1" + price);
+            $(".btnBackFooter").css("width", "18%");
+            $(".btnNextFooter").css("width", "75%");
+        }
+    });
+
+    $(".btnBackFooter").click(function () {
+        if (back === 1) {
+            window.location = "index.html";
+        }
+        else if (back === 2) {
+            const element = document.querySelector('.divMembership')
+            element.classList.add('animated', 'fadeOut');
+            $(".divMembership").css("display", "none");
+            $(".divMembership").removeClass("animated");
+            $(".divMembership").removeClass("fadeOut");
+            $(".divStep2").removeClass("divBoxActive");
+            $(".divStep1").addClass("divBoxActive");
+            const element1 = document.querySelector('.divCreate')
+            element1.classList.add('animated', 'fadeIn');
+            $(".divCreate").css("display", "block");
+            next = 1;
+
+        }
+        else if (back === 3) {
+            const element = document.querySelector('.divAddress')
+            element.classList.add('animated', 'fadeOut');
+            $(".divAddress").css("display", "none");
+            $(".divAddress").removeClass("animated");
+            $(".divAddress").removeClass("fadeOut");
+            const element1 = document.querySelector('.divPersonalInfo')
+            element1.classList.add('animated', 'fadeIn');
+            $(".divPersonalInfo").css("display", "block");
+            back = 2;
+            next = 2;
+            $(".imgArrow").css("display", "none");
+            $(".btnNextFooter").html("Next");
+        }
+        else if (back === 4) {
+            const element = document.querySelector('.divOverview')
+            element.classList.add('animated', 'fadeOut');
+            $(".divOverview").css("display", "none");
+            $(".divOverview").removeClass("animated");
+            $(".divOverview").removeClass("fadeOut");
+            $(".divStep3").removeClass("divBoxActive");
+            $(".divStep2").addClass("divBoxActive");
+            const element1 = document.querySelector('.divMembership')
+            element1.classList.add('animated', 'fadeIn');
+            $(".divMembership").css("display", "block");
+        }
+    });
+</script>
+
 </html>
