--- a/info.html
+++ b/info.html
@@ -253,6 +253,50 @@
                                 </div>
                             </div>
                             <div class="row" style="margin-top: 20px;">
+                                <div class="col-lg-12">
+                                    <div class="form-inline">
+
+                                        <input class="inp-cbx" id="morning" type="checkbox" />
+                                        <label class="cbx" for="morning"><span>
+                                                <svg width="12px" height="10px">
+                                                    <use xlink:href="#check"></use>
+                                                </svg></span><span>I never had Liver disease, Heart attack, Stroke,
+                                                Cancer, Tumor of any kind, Diabetes, Kidney disease, HIV/AIDS, mental or
+                                                mood disorders, loss of vision (other than vision corrected by
+                                                prescription lens), or loss or deformity of limbs</span></label>
+
+                                        <input class="inp-cbx" id="noon" type="checkbox" />
+                                        <label class="cbx" for="noon"><span>
+                                                <svg width="12px" height="10px">
+                                                    <use xlink:href="#check"></use>
+                                                </svg></span><span>I do not have a medical condition (other than flu)
+                                                that
+                                                has required repeated consultation or 2 weeks or more of continuous
+                                                treatment in last 3 years;</span></label>
+                                        <input class="inp-cbx" id="afternoon" type="checkbox" />
+                                        <label class="cbx" for="afternoon"><span>
+                                                <svg width="12px" height="10px">
+                                                    <use xlink:href="#check"></use>
+                                                </svg></span><span>I am not awaiting any medical investigations,
+                                                receiving
+                                                treatment, or experiencing any symptoms</span></label>
+                                        <input class="inp-cbx" id="evening" type="checkbox" style="display: none" />
+                                        <label class="cbx" for="evening"><span>
+                                                <svg width="12px" height="10px">
+                                                    <use xlink:href="#check"></use>
+                                                </svg></span><span>I have never been declined, postponed, or accepted on
+                                                modified terms for any insurance plans.</span></label>
+                                    </div>
+
+                                    <!--SVG Sprites-->
+                                    <svg class="inline-svg">
+                                        <symbol id="check" viewbox="0 0 12 10">
+                                            <polyline points="1.5 6 4.5 9 10.5 1"></polyline>
+                                        </symbol>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="row" style="margin-top: 20px;">
                                 <div class="col-lg-12 text-right" aria-required="">
                                     <input type="button" class="btnsave" onClick="toInfopage()" value="Proceed">
                                 </div>
